--- a/view/app/templates/customize.html
+++ b/view/app/templates/customize.html
@@ -16,13 +16,45 @@
         <div class="row justify-content-center">
             <div class="col-md-6 mt-4 mt-md-0">
                 <h2 class="text-center">Customize QR Code</h2>
-                <form id="customize" method="POST" action="{{ url_for('main.finalize_qr') }}">
+                <form id="customize" method="POST" action="{{ url_for('main.finalize_qr') }}" enctype="multipart/form-data">
+                    <div class="form-section">
+                        <h4>Text</h4>
+                        <label for="qr_text">Additional Text:</label>
+                        <input type="text" class="form-control" id="qr_text" name="qr_text" placeholder="Enter Text">
+
+                        <label for="text_position">Text Position</label>
+                        <select id="text_position" name="text_position">
+                            <option value="above">Above</option>
+                            <option value="below">Below</option>
+                        </select>
+
+                        <label for="text_font_size">Text Font Size:</label>
+                        <input type="number" id="text_font_size" name="text_font_size" value="40" min="10" max="100">
+
+                        <label for="text_font_style">Text Style:</label>
+                        <select id="text_font_style" name="text_font_style">
+                            <option value="arial" style="font-family: Arial;">Arial</option>
+                            <option value="times" style="font-family: 'Times New Roman';">Times</option>
+                            <option value="courier" style="font-family: 'Courier New';">Courier</option>
+                            <option value="italic" style="font-style: italic;">Italic</option>
+                            <option value="bold" style="font-family: bold;">Bold</option>
+                        </select>
+
+                        <label for="text_color">Text Color:</label>
+                        <input type="color" id="text_color" name="text_color" value="#000000">
+                    </div>
+
+                    <div class="form-section">
+                        <h4>Color</h4>
                     <label for="fill_color">Fill Color:</label>
                     <input type="color" id="fill_color" name="fill_color" value="#000000">
                 
                     <label for="back_color">Background Color:</label>
                     <input type="color" id="back_color" name="back_color" value="#ffffff">
-                
+                    </div>
+
+                    <div class="form-section">
+                        <h4>Scannability</h4>
                     <label for="error_correction">Error Correction Level:</label>
                     <select id="error_correction" name="error_correction">
                         <option value="L">Low (7%)</option>
@@ -30,13 +62,68 @@
                         <option value="Q">Quartile (25%)</option>
                         <option value="H">High (30%)</option>
                     </select>
+                    <small class="text-muted">Higher levels of error correction make the QR code more resilient to damage, but reduce the amount of data it can store.</small>
+                    </div>
                 
+                    <div class="form-section">
+                        <h4>Shape</h4>
                     <label for="box_size">Box Size:</label>
                     <input type="number" id="box_size" name="box_size" value="10" min="1" max="40">
-                
+                        
                     <label for="border">Border Size:</label>
                     <input type="number" id="border" name="border" value="4" min="1" max="10">
-                
+
+                    <label for="dot_shape">Dots Style:</label>
+                    <select id="dot_shape" name="dot_shape" class="dot-shape-select">
+                        <option value="square" data-custom-properties='{"image":"/static/img/customize/square.png"}'>Square</option>
+                        <option value="circle" data-custom-properties='{"image":"/static/img/customize/circle.png"}'>Circle</option>
+                        <option value="rounded" data-custom-properties='{"image":"/static/img/customize/rounded.png"}'>Rounded</option>
+                        <option value="vertical_bars" data-custom-properties='{"image":"/static/img/customize/vertical.png"}'>Vertical Bars</option>
+                        <option value="horizontal_bars" data-custom-properties='{"image":"/static/img/customize/horizontal.png"}'>Horizontal Bars</option>
+                        <option value="gapped_square" data-custom-properties='{"image":"/static/img/customize/gapped.png"}'>Gapped Square</option>
+                    </select>
+
+                    <label for="marker_border_shape">Marker Border Shape:</label>
+                    <select id="marker_border_shape" name="marker_border_shape" class="marker-border-shape-select">
+                        <option value="square" data-custom-properties='{"image":"/static/img/customize/square.png"}'>Square</option>
+                        <option value="circle" data-custom-properties='{"image":"/static/img/customize/circle.png"}'>Circle</option>
+                        <option value="rounded" data-custom-properties='{"image":"/static/img/customize/rounded.png"}'>Rounded</option>
+                        <option value="vertical_bars" data-custom-properties='{"image":"/static/img/customize/vertical.png"}'>Vertical Bars</option>
+                        <option value="horizontal_bars" data-custom-properties='{"image":"/static/img/customize/horizontal.png"}'>Horizontal Bars</option>
+                        <option value="gapped_square" data-custom-properties='{"image":"/static/img/customize/gapped.png"}'>Gapped Square</option>
+                        <!-- Add more shapes as needed -->
+                    </select>
+
+                    <label for="marker_center_shape">Marker Center Shape:</label>
+                    <select id="marker_center_shape" name="marker_center_shape" class="marker-center-shape-select">
+                        <option value="square" data-custom-properties='{"image":"/static/img/customize/square.png"}'>Square</option>
+                        <option value="circle" data-custom-properties='{"image":"/static/img/customize/circle.png"}'>Circle</option>
+                        <option value="rounded" data-custom-properties='{"image":"/static/img/customize/rounded.png"}'>Rounded</option>
+                        <option value="gapped_square" data-custom-properties='{"image":"/static/img/customize/gapped.png"}'>Gapped Square</option>
+                        <!-- Add more shapes as needed -->
+                    </select>
+                    </div>
+
+                    <div class="form-section">
+                    <h4>Logo</h4>
+                    <label for="logo">Upload Logo:</label>
+                    <input type="file" class="form-control" name="logo" id="logo" accept="image/*">
+
+                    <label>Or Choose a Predefined Logo:</label>
+                    <div id="predefined_logo" class="predefined-logo-box">
+                        <div class="predefined-logo-item" data-logo="logo1">
+                            <img src="{{ url_for('static', filename='img/logos/logo1.png') }}" alt="Logo 1" class="predefined-logo">
+                        </div>
+                        <div class="predefined-logo-item" data-logo="logo2">
+                            <img src="{{ url_for('static', filename='img/logos/logo2.png') }}" alt="Logo 2" class="predefined-logo">
+                        </div>
+                        <div class="predefined-logo-item" data-logo="logo3">
+                            <img src="{{ url_for('static', filename='img/logos/logo3.png') }}" alt="Logo 3" class="predefined-logo">
+                        </div>
+                    </div>
+                    </div>
+
+                    <input type="hidden" id="selected_predefined_logo" name="predefined_logo" value="">
                     <input type="hidden" name="qr_data" value="{{ qr_data }}">
                     <input type="hidden" name="name" value="{{ name }}">
                 
@@ -74,8 +161,131 @@
     })
     .catch(error => console.error('Error:', error));
 });
-
 </script>
 
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const inputs = document.querySelectorAll('input[type="number"]');
+
+        inputs.forEach(input => {
+            input.addEventListener('input', function () {
+                const min = parseInt(this.min);
+                const max = parseInt(this.max);
+                let value = parseInt(this.value);
+
+                if (value < min) {
+                    this.value = min;
+                } else if (value > max) {
+                    this.value = max;
+                }
+            });
+        });
+    });
+</script>
+
+<script>
+    const predefinedLogos = document.querySelectorAll('.predefined-logo-item');
+    const fileInput = document.getElementById('logo');
+    const hiddenInput = document.getElementById('selected_predefined_logo');
+
+    predefinedLogos.forEach(logo => {
+        logo.addEventListener('click', function () {
+            // Clear the uploaded file
+            fileInput.value = '';
+
+            // Highlight the selected logo
+            predefinedLogos.forEach(item => item.classList.remove('selected'));
+            this.classList.add('selected');
+
+            // Set the value of the hidden input to the selected logo
+            hiddenInput.value = this.dataset.logo;
+        });
+    });
+
+    fileInput.addEventListener('change', function () {
+        // Clear the selected predefined logo
+        hiddenInput.value = '';
+        predefinedLogos.forEach(item => item.classList.remove('selected'));
+    });
+</script>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const dotShapeSelect = new Choices('#dot_shape', {
+            searchEnabled: false,
+            shouldSort: false,
+            callbackOnCreateTemplates: function (template) {
+                return {
+                    item: (classNames, data) => {
+                        return template(`
+                            <div class="${classNames.item} ${data.highlighted ? classNames.highlightedState : classNames.itemSelectable}" data-item data-id="${data.id}" data-value="${data.value}" ${data.active ? 'aria-selected="true"' : ''} ${data.disabled ? 'aria-disabled="true"' : ''}>
+                                <img src="${data.customProperties.image}" alt="${data.label}" style="width: 20px; height: 20px; margin-right: 10px;">
+                                ${data.label}
+                            </div>
+                        `);
+                    },
+                    choice: (classNames, data) => {
+                        return template(`
+                            <div class="${classNames.item} ${classNames.itemChoice} ${data.disabled ? classNames.itemDisabled : classNames.itemSelectable}" data-select-text="${this.config.itemSelectText}" data-choice data-id="${data.id}" data-value="${data.value}" ${data.groupId > 0 ? 'role="treeitem"' : 'role="option"'}>
+                                <img src="${data.customProperties.image}" alt="${data.label}" style="width: 20px; height: 20px; margin-right: 10px;">
+                                ${data.label}
+                            </div>
+                        `);
+                    },
+                };
+            },
+        });
+
+        const markerBorderShapeSelect = new Choices('#marker_border_shape', {
+            searchEnabled: false,
+            shouldSort: false,
+            callbackOnCreateTemplates: function (template) {
+                return {
+                    item: (classNames, data) => {
+                        return template(`
+                            <div class="${classNames.item} ${data.highlighted ? classNames.highlightedState : classNames.itemSelectable}" data-item data-id="${data.id}" data-value="${data.value}" ${data.active ? 'aria-selected="true"' : ''} ${data.disabled ? 'aria-disabled="true"' : ''}>
+                                <img src="${data.customProperties.image}" alt="${data.label}" style="width: 20px; height: 20px; margin-right: 10px;">
+                                ${data.label}
+                            </div>
+                        `);
+                    },
+                    choice: (classNames, data) => {
+                        return template(`
+                            <div class="${classNames.item} ${classNames.itemChoice} ${data.disabled ? classNames.itemDisabled : classNames.itemSelectable}" data-select-text="${this.config.itemSelectText}" data-choice data-id="${data.id}" data-value="${data.value}" ${data.groupId > 0 ? 'role="treeitem"' : 'role="option"'}>
+                                <img src="${data.customProperties.image}" alt="${data.label}" style="width: 20px; height: 20px; margin-right: 10px;">
+                                ${data.label}
+                            </div>
+                        `);
+                    },
+                };
+            },
+        });
+
+        const markerCenterShapeSelect = new Choices('#marker_center_shape', {
+            searchEnabled: false,
+            shouldSort: false,
+            callbackOnCreateTemplates: function (template) {
+                return {
+                    item: (classNames, data) => {
+                        return template(`
+                            <div class="${classNames.item} ${data.highlighted ? classNames.highlightedState : classNames.itemSelectable}" data-item data-id="${data.id}" data-value="${data.value}" ${data.active ? 'aria-selected="true"' : ''} ${data.disabled ? 'aria-disabled="true"' : ''}>
+                                <img src="${data.customProperties.image}" alt="${data.label}" style="width: 20px; height: 20px; margin-right: 10px;">
+                                ${data.label}
+                            </div>
+                        `);
+                    },
+                    choice: (classNames, data) => {
+                        return template(`
+                            <div class="${classNames.item} ${classNames.itemChoice} ${data.disabled ? classNames.itemDisabled : classNames.itemSelectable}" data-select-text="${this.config.itemSelectText}" data-choice data-id="${data.id}" data-value="${data.value}" ${data.groupId > 0 ? 'role="treeitem"' : 'role="option"'}>
+                                <img src="${data.customProperties.image}" alt="${data.label}" style="width: 20px; height: 20px; margin-right: 10px;">
+                                ${data.label}
+                            </div>
+                        `);
+                    },
+                };
+            },
+        });
+    });
+</script>
 
 {% endblock %}
