--- a/view/app/static/css/style.css
+++ b/view/app/static/css/style.css
@@ -906,6 +906,61 @@ button {
         transition: 1.5s ease;
       }
 
+      .btn-reset {
+        font-family: Arial, Helvetica, sans-serif;
+        margin-right: 20px;
+        font-weight: bold;
+        color: white;
+        background-color: #171717;
+        padding: 10px 20px;
+        border: none;
+        border-radius: .6rem;
+        position: relative;
+        cursor: pointer;
+        overflow: hidden;
+      }
+      
+      .btn-reset span:not(:nth-child(6)) {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        height: 30px;
+        width: 30px;
+        background-color: #ed0c0c;
+        border-radius: 50%;
+        transition: .6s ease;
+      }
+      
+      .btn-reset span:nth-child(6) {
+        position: relative;
+      }
+      
+      .btn-reset span:nth-child(1) {
+        transform: translate(-3.3em, -4em);
+      }
+      
+      .btn-reset span:nth-child(2) {
+        transform: translate(-6em, 1.3em);
+      }
+      
+      .btn-reset span:nth-child(3) {
+        transform: translate(-.2em, 1.8em);
+      }
+      
+      .btn-reset span:nth-child(4) {
+        transform: translate(3.5em, 1.4em);
+      }
+      
+      .btn-reset span:nth-child(5) {
+        transform: translate(3.5em, -3.8em);
+      }
+      
+      .btn-reset:hover span:not(:nth-child(6)) {
+        transform: translate(-50%, -50%) scale(4);
+        transition: 1.5s ease;
+      }
+
       
       .btn-basic {background-image: linear-gradient(to right, #56CCF2 0%, #2F80ED  51%, #56CCF2  100%)}
       .btn-basic {
@@ -1771,4 +1826,41 @@ small.text-muted {
         transform: rotate(360deg);
     }
 }
+
+.back {
+    display: flex;
+    height: 3em;
+    width: 100px;
+    align-items: center;
+    justify-content: center;
+    background-color: #4ADE80;
+    border-radius: 8px;
+    letter-spacing: 1px;
+    transition: all 0.2s linear;
+    cursor: pointer;
+    text-decoration: none;
+    border: none;
+    color: black;
+    font-weight: bold;
+  }
+
+  .back > svg {
+    margin-right: 5px;
+    margin-left: 5px;
+    font-size: 20px;
+    transition: all 0.4s ease-in;
+    fill: black; 
+  }
+
+  .back:hover > svg {
+    font-size: 1.2em;
+    transform: translateX(-5px);
+    fill: #28894C; 
+  }
+
+  .back:hover {
+    box-shadow: 9px 9px 33px #c7e1f4, -9px -9px 33px #ffffff;
+    transform: translateY(-2px);
+    background-color: #A2FDC3;
+  }
 
