track qr code scan count

--- a/view/app/partials/footer.html
+++ b/view/app/partials/footer.html
@@ -9,7 +9,7 @@
                 <span class="h5 mb-2" style="display: block;">Follow Us</span>
                 <a href="https://www.facebook.com/" target="_blank" class="icon icon-lg text-gray mr-3"><span class="fab fa-facebook" style="font-size: 25px;"></span></a>
                 <a href="https://twitter.com/" target="_blank" class="icon icon-lg text-gray mr-3"><span class="fab fa-twitter" style="font-size: 25px;"></span></a>
-                <a href="https://www.linkedin.com/company/" target="_blank" class="icon icon-lg text-gray mr-3"><span class="fab fa-linkedin" style="font-size: 25px;"></span></a>
+                <a href="https://www.linkedin.com/" target="_blank" class="icon icon-lg text-gray mr-3"><span class="fab fa-linkedin" style="font-size: 25px;"></span></a>
              </div>
           </div>
  
